static/css/base.css
body {
    background: url('/media/hero-image1.jpg') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 88px);
    font-family: 'IBM Plex Sans', sans-serif;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: white;
    z-index: -1;
}

.container-padding {
    padding-top: 100px;
}

.list-group {
    max-width: 400px;
}

/* navbar */
.main-nav-logo {
    font-family: 'Lobster', cursive;
    color: #fff !important;
}

/* text */
.text-grey {
    color: #9f9f9f !important;
}

/* buttons */
.btn-grey {
    background-color: #9f9f9f;
}

.shop-now-button {
    background: black;
    color: white;
    min-width: 260px;
}

.update-link,
.remove-item {
    cursor: pointer;
}

/* colors */
.bg-maroon {
    background-color: #540404;
}

/* toasts */
.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* Product Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* media queries */
@media (max-width: 1194px) {
    .container-padding {
        padding-top: 122px;
    }
}

@media (max-width: 423px) {
    .container-padding {
        padding-top: 162px;
    }
}

